# irtk_apps_pa

./: .gitignore  CMakeLists.txt  CONVERT_IRTKINCLUDE_CMAKE_mac_os_x.sh  IRTKInclude.cmake  addslices.cc  atlas_real.cc  blurWithPadding.cc  cca_ibim-ar.cc  cca_ibim.cc  clamp.cc  cobiascorrect.cc  combineAffineAndMffd.cc  combineLabels.cc  combineLabels2.cc  combineLabelsConditional.cc  consistency.cc  constrainedhreg.cc.old  csvHist_2D.cc  cuboid.cc  defmap.cc  defmapstats.cc  dilationWithPadding.cc  dr-bias.cc  ems2.cc  evaluation2.cc  evaluation4D.cc  ffdaverage.cc.old  ffdbending.cc  ffdinvert.cc  ffdplusffd.cc  ffdputaffine.cc  fill.cc  grad3D.cc  hausdorff.cc  histogramCCA.cc  hreg2.cc  hregmulti.cc  imagebbox.cc  imagecentreofgravity.cc  imageexp.cc  (+62 more)
applications/: CMakeLists.txt  addimages.cc  addslices.cc  affineaverage.cc  affinecompose.cc  affineextractrigid.cc  affineinvert.cc  affineresetrigid.cc  atlas_jacobians.cc  atlas_real.cc  blur_real.cc  cca_ibim-ar.cc  cca_ibim.cc  clamp.cc  cobiascorrect.cc  combineAffineAndMffd.cc  combineLabels2.cc  combineLabelsConditional.cc  concatenate_stacks.cc  constrainedhreg.cc  cortexGuessSides.cc  crossTissuesAndLabels.cc  csv2mat.cc  csvHist_2D.cc  defmapstats.cc  delaunay.cc  dilationWithPadding.cc  dof2movie.cc  dofprint.cc  dr-bias.cc  ems2.cc  equalise.cc  evaluation2.cc  evaluation4D.cc  evaluationAligned.cc  evaluationReal.cc  expandBrainMask.cc  extract_roi.cc  ffd2images.cc  ffdPrependRigid.cc  (+130 more)
include/: abcdPointDistanceMap.h  abcdRandomRotationSource.h  abcdUtils.h  vtkPolyDataSmoothCustom.h  zeta.h
src/: CMakeLists.txt  abcdPointDistanceMap.cc  abcdRandomRotationSource.cc  abcdUtils.cc  vtkPolyDataSmoothCustom.cc  zeta.cc
testing/: TESTS.sh  clean-files.sh  test-output-archive.txt
testing/outputFilesArchive/: bla.vtk  bla2.vtk  bla3.vtk  bumps-d.vtk  bumps-dec.vtk  bumps-maths.vtk  bumps-recalcN.vtk  bumps-remesh.vtk  bumps-rs-2.vtk  bumps-rs.vtk  bumps-smooth.vtk  bumps-ss.vtk  bumps.vtk  ranSph-1.vtk  ranSph-2.vtk  rois-lcc.vtk  rois.vtk
