IF (BUILD_CONDOR_EXE)
  #  SET (CMAKE_CXX_COMPILER "condor_compile ${CMAKE_CXX_COMPILER}")
  # This is a hack since the line above doesn't work: this local 
  # scripts executes condor_compile with the option "c++". That means,
  # the variable CMAKE_CXX_COMPILER defined in ccmake is not taken 
  # into account!
  SET (CMAKE_CXX_COMPILER "${IRTK_SOURCE_DIR}/condor_compile.sh")

#  ADD_EXECUTABLE(combineLabels.condor combineLabels.cc)

ELSE(BUILD_CONDOR_EXE)

  IF (BUILD_MPI_EXE)

  ELSE (BUILD_MPI_EXE)

    ADD_EXECUTABLE(addimages addimages.cc)
    ADD_EXECUTABLE(addslices addslices.cc)
    ADD_EXECUTABLE(affineaverage affineaverage.cc)
    ADD_EXECUTABLE(affinecompose affinecompose.cc)
    ADD_EXECUTABLE(affineextractrigid affineextractrigid.cc)
    ADD_EXECUTABLE(affineinvert affineinvert.cc)
    ADD_EXECUTABLE(affineresetrigid affineresetrigid.cc)
    ADD_EXECUTABLE(atlas_jacobians atlas_jacobians.cc)
    ADD_EXECUTABLE(atlas_real atlas_real.cc)
    ADD_EXECUTABLE(blur_real blur_real.cc)
    ADD_EXECUTABLE(blurWithPadding blurWithPadding.cc)
    ADD_EXECUTABLE(clamp clamp.cc)
    ADD_EXECUTABLE(combineAffineAndMffd combineAffineAndMffd.cc)
#    ADD_EXECUTABLE(combineLabels combineLabels.cc)
    ADD_EXECUTABLE(combineLabels2 combineLabels2.cc)
    ADD_EXECUTABLE(concatenate_stacks concatenate_stacks.cc)
    ADD_EXECUTABLE(cortexGuessSides cortexGuessSides.cc)
    ADD_EXECUTABLE(csvHist_2D csvHist_2D.cc)
    ADD_EXECUTABLE(cuboid cuboid.cc)
    ADD_EXECUTABLE(defmapstats defmapstats.cc)
    ADD_EXECUTABLE(dof2movie dof2movie.cc)
#    ADD_EXECUTABLE(dofprint dofprint.cc)
    ADD_EXECUTABLE(equalise equalise.cc)
#    ADD_EXECUTABLE(evaluation4D evaluation4D.cc)
    ADD_EXECUTABLE(evaluation2 evaluation2.cc)
    ADD_EXECUTABLE(evaluationAligned evaluationAligned.cc)
    ADD_EXECUTABLE(evaluationReal evaluationReal.cc)
    ADD_EXECUTABLE(extract_roi extract_roi.cc)
    ADD_EXECUTABLE(ffd2images ffd2images.cc)
    ADD_EXECUTABLE(ffdbending ffdbending.cc)
#    ADD_EXECUTABLE(ffdcompose ffdcompose.cc)
#    ADD_EXECUTABLE(ffdcomposeN ffdcomposeN.cc)
#    ADD_EXECUTABLE(ffdinvert ffdinvert.cc)
    ADD_EXECUTABLE(ffdmagnitude ffdmagnitude.cc)
    ADD_EXECUTABLE(ffdmedianaverage ffdmedianaverage.cc)
    ADD_EXECUTABLE(ffdPrependRigid ffdPrependRigid.cc)
    ADD_EXECUTABLE(ffdplusffd ffdplusffd.cc)
    ADD_EXECUTABLE(ffdputaffine ffdputaffine.cc)
    ADD_EXECUTABLE(ffdrandom ffdrandom.cc)
    ADD_EXECUTABLE(ffdregrid ffdregrid.cc)
    ADD_EXECUTABLE(ffdscale ffdscale.cc)
    ADD_EXECUTABLE(ffdtopologypenalty ffdtopologypenalty.cc)
    ADD_EXECUTABLE(ffdtransform2 ffdtransform2.cc)
    ADD_EXECUTABLE(fill fill.cc)
    ADD_EXECUTABLE(grad3D grad3D.cc)
    ADD_EXECUTABLE(hausdorff hausdorff.cc)
    ADD_EXECUTABLE(histogram_pa histogram_pa.cc)
    ADD_EXECUTABLE(i2wmatrix i2wmatrix.cc)
    ADD_EXECUTABLE(identifyregion identifyregion.cc)
    ADD_EXECUTABLE(image2vtkgrid image2vtkgrid.cc)
    ADD_EXECUTABLE(imageabs imageabs.cc)
    ADD_EXECUTABLE(imagebbox imagebbox.cc)
    ADD_EXECUTABLE(imagecentreofgravity imagecentreofgravity.cc)
    ADD_EXECUTABLE(imageexp imageexp.cc)
    ADD_EXECUTABLE(imagegriddistance imagegriddistance.cc)
    ADD_EXECUTABLE(imagelog imagelog.cc)
    ADD_EXECUTABLE(imagepercentile imagepercentile.cc)
    ADD_EXECUTABLE(imagepow imagepow.cc)
    ADD_EXECUTABLE(imageprofile imageprofile.cc)
    ADD_EXECUTABLE(images2ffd images2ffd.cc)
    ADD_EXECUTABLE(images2ffdApp images2ffdApp.cc)
    ADD_EXECUTABLE(imagesmax imagesmax.cc)
    ADD_EXECUTABLE(imagesmedian imagesmedian.cc)
    ADD_EXECUTABLE(jacobian_statistics jacobian_statistics.cc)
    ADD_EXECUTABLE(landmarks2csv landmarks2csv.cc)
    ADD_EXECUTABLE(landmarkEllipsoids landmarkEllipsoids.cc)
    ADD_EXECUTABLE(mask_point_distance_map mask_point_distance_map.cc)
    ADD_EXECUTABLE(matchhistogram matchhistogram.cc)
    ADD_EXECUTABLE(matmult matmult.cc)
    ADD_EXECUTABLE(matrix2polydata matrix2polydata.cc)
    ADD_EXECUTABLE(matrix2csv matrix2csv.cc)
    ADD_EXECUTABLE(multiplyImages multiplyImages.cc)
    ADD_EXECUTABLE(multislicecorrect multislicecorrect.cc)
    ADD_EXECUTABLE(overlap_pa overlap_pa.cc)
#    ADD_EXECUTABLE(parzenStub parzenStub.cc)
    ADD_EXECUTABLE(pcanalysis2 pcanalysis2.cc)
    ADD_EXECUTABLE(pca_visualise_mode pca_visualise_mode.cc)
    ADD_EXECUTABLE(points2glyphs points2glyphs.cc)
    ADD_EXECUTABLE(pointsdistancestats pointsdistancestats.cc)
    ADD_EXECUTABLE(pointtransform pointtransform.cc)
    ADD_EXECUTABLE(polydata2binary polydata2binary.cc)
    ADD_EXECUTABLE(polydata2dmap polydata2dmap.cc)
    ADD_EXECUTABLE(polydata2maskimage polydata2maskimage.cc)
    ADD_EXECUTABLE(polydata2matrix polydata2matrix.cc)
    ADD_EXECUTABLE(polydataaddtoscalars polydataaddtoscalars.cc)
    ADD_EXECUTABLE(polydataappend polydataappend.cc)
    ADD_EXECUTABLE(polydataassignlabels polydataassignlabels.cc)
    ADD_EXECUTABLE(polydataassignscalars polydataassignscalars.cc)
    ADD_EXECUTABLE(polydatabinarizescalars polydatabinarizescalars.cc)
    ADD_EXECUTABLE(polydatabumps polydatabumps.cc)
    ADD_EXECUTABLE(polydatacentreofgravity polydatacentreofgravity.cc)
    ADD_EXECUTABLE(polydataclampscalars polydataclampscalars.cc)
    ADD_EXECUTABLE(polydataclean polydataclean.cc)
    ADD_EXECUTABLE(polydataconvert polydataconvert.cc)
    ADD_EXECUTABLE(polydatacurvature polydatacurvature.cc)
    ADD_EXECUTABLE(polydatacurvatureindices polydatacurvatureindices.cc)
    ADD_EXECUTABLE(polydatadecimate polydatadecimate.cc)
    ADD_EXECUTABLE(polydatadelaunay polydatadelaunay.cc)
    ADD_EXECUTABLE(polydatadeletescalars polydatadeletescalars.cc)
    ADD_EXECUTABLE(polydatadisplacements polydatadisplacements.cc)
    ADD_EXECUTABLE(polydataeuclidean polydataeuclidean.cc)
# polydatageodesic needs VTK 5.2 ... no more - no less
    ADD_EXECUTABLE(polydatageodesic polydatageodesic.cc)
    ADD_EXECUTABLE(polydatahull polydatahull.cc)
    ADD_EXECUTABLE(polydatainfo polydatainfo.cc)
    ADD_EXECUTABLE(polydatalcc polydatalcc.cc)
    ADD_EXECUTABLE(polydatalistscalars polydatalistscalars.cc)
    ADD_EXECUTABLE(polydatamaths polydatamaths.cc)
    ADD_EXECUTABLE(polydatamean polydatamean.cc)
    ADD_EXECUTABLE(polydatamask polydatamask.cc)
    ADD_EXECUTABLE(polydatameanradius polydatameanradius.cc)
    ADD_EXECUTABLE(polydatamultiplyscalars polydatamultiplyscalars.cc)
    ADD_EXECUTABLE(polydatanormalise polydatanormalise.cc)
    ADD_EXECUTABLE(polydatapercentile polydatapercentile.cc)
    ADD_EXECUTABLE(polydatapointdistances polydatapointdistances.cc)
    ADD_EXECUTABLE(polydatarandomscalars polydatarandomscalars.cc)
    ADD_EXECUTABLE(polydatarandomsphericalpoints polydatarandomsphericalpoints.cc)
    ADD_EXECUTABLE(polydatarecalculatenormals polydatarecalculatenormals.cc)
    ADD_EXECUTABLE(polydatareflect polydatareflect.cc)
    ADD_EXECUTABLE(polydataremesh polydataremesh.cc)
    ADD_EXECUTABLE(polydatarenamescalars polydatarenamescalars.cc)
    ADD_EXECUTABLE(polydatascalars2coords polydatascalars2coords.cc)
    ADD_EXECUTABLE(polydatascalarhist polydatascalarhist.cc)
    ADD_EXECUTABLE(polydatascalarsmooth polydatascalarsmooth.cc)
    ADD_EXECUTABLE(polydatascalarstats polydatascalarstats.cc)
    ADD_EXECUTABLE(polydatasmooth polydatasmooth.cc)
    ADD_EXECUTABLE(polydatasphere polydatasphere.cc)
    ADD_EXECUTABLE(polydatasurfacearea polydatasurfacearea.cc)
    ADD_EXECUTABLE(polydatasurfacedistance polydatasurfacedistance.cc)
# TODO : convert this to GSL
#    ADD_EXECUTABLE(polydatasymmetry polydatasymmetry.cc)
    ADD_EXECUTABLE(polydatatransformscalars polydatatransformscalars.cc)
	ADD_EXECUTABLE(polydatavolume polydatavolume.cc)
    ADD_EXECUTABLE(procrustes_align procrustes_align.cc)
    ADD_EXECUTABLE(reflect2 reflect2.cc)
    ADD_EXECUTABLE(region_real region_real.cc)
    ADD_EXECUTABLE(regress regress.cc)
    ADD_EXECUTABLE(resample_real resample_real.cc)
    ADD_EXECUTABLE(scaleimage scaleimage.cc)
    ADD_EXECUTABLE(shreg_scalars shreg_scalars.cc)
    ADD_EXECUTABLE(sphere sphere.cc)
    ADD_EXECUTABLE(tissueMapVolume tissueMapVolume.cc)
    ADD_EXECUTABLE(tmp tmp.cc)
    ADD_EXECUTABLE(transformationBySplatting transformationBySplatting.cc)
    ADD_EXECUTABLE(transformationReal transformationReal.cc)
    ADD_EXECUTABLE(transformationN transformationN.cc)
    ADD_EXECUTABLE(vrml_viewer vrml_viewer.cc)
    ADD_EXECUTABLE(vtkadd vtkadd.cc)
    ADD_EXECUTABLE(vtkscale vtkscale.cc)
    ADD_EXECUTABLE(w2imatrix w2imatrix.cc)
#
#
#    ADD_EXECUTABLE(cca_ibim cca_ibim.cc)
#    ADD_EXECUTABLE(cca_ibim_ar cca_ibim_ar.cc)
#    ADD_EXECUTABLE(cobiascorrect cobiascorrect.cc)
#    ADD_EXECUTABLE(combineLabelsConditional combineLabelsConditional.cc)
#    ADD_EXECUTABLE(consistency consistency.cc)
#    ADD_EXECUTABLE(constrainedhreg constrainedhreg.cc)
#    ADD_EXECUTABLE(crossTissuesAndLabels crossTissuesAndLabels.cc)
#    ADD_EXECUTABLE(csv2mat csv2mat.cc)
#    ADD_EXECUTABLE(dilationWithPadding dilationWithPadding.cc)
#    ADD_EXECUTABLE(dr_bias dr_bias.cc)
#    ADD_EXECUTABLE(ems2 ems2.cc)
#    ADD_EXECUTABLE(expandBrainMask expandBrainMask.cc)
#    ADD_EXECUTABLE(ffdlogaverage ffdlogaverage.cc)
#    ADD_EXECUTABLE(histogramCCA histogramCCA.cc)
#    ADD_EXECUTABLE(histogramPCA histogramPCA.cc)
#    ADD_EXECUTABLE(hreg2 hreg2.cc)
#    ADD_EXECUTABLE(hregmulti hregmulti.cc)
#    ADD_EXECUTABLE(intensitymatch intensitymatch.cc)
#    ADD_EXECUTABLE(labelStats2 labelStats2.cc)
#    ADD_EXECUTABLE(likelihood likelihood.cc)
#    ADD_EXECUTABLE(marginalmean_ibim marginalmean_ibim.cc)
#    ADD_EXECUTABLE(nucorrect nucorrect.cc)
#    ADD_EXECUTABLE(pcaDistanceMap pcaDistanceMap.cc)
#    ADD_EXECUTABLE(pcanalysis_variances_only pcanalysis_variances_only.cc)
#    ADD_EXECUTABLE(pointstocubes pointstocubes.cc)
#    ADD_EXECUTABLE(screePlotArea screePlotArea.cc)
#    ADD_EXECUTABLE(shreg_PA shreg_PA.cc)
#    ADD_EXECUTABLE(shreg_multipleDOFs shreg_multipleDOFs.cc)
#    ADD_EXECUTABLE(simulateMRimage simulateMRimage.cc)
#    ADD_EXECUTABLE(stransformation_local stransformation_local.cc)
#    ADD_EXECUTABLE(tissueLabels tissueLabels.cc)
#    ADD_EXECUTABLE(wpls_ibim wpls_ibim.cc)
#    ADD_EXECUTABLE(wpls_ibim_ar wpls_ibim_ar.cc)



  ENDIF (BUILD_MPI_EXE)

# INSTALL_TARGETS(/bin )

ENDIF (BUILD_CONDOR_EXE)

